# ToFiSca

./: README.rst  pyproject.toml  requirements.txt
docs/: app_structure.dia
src/mock_picamera2/: __init__.py  camera.py  camera_imx477.py  cameramanager.py  controls.py  formats.py  libcamera.py  mock_picamer2_preview.py  picamera2.py  request.py  stream.py
src/mock_picamera2/Cameras/: imx477.py
src/mock_picamera2/encoders/: __init__.py  jpeg_encoder.py
src/mock_picamera2/outputs/: __init__.py  fileoutput.py
src/mock_picamera2/tests/: test_picamera2.py
src/tofisca/: app.py  camera_manager.py  film_specs.py  hardware_manager.py  main.py  models.py  project.py  scanarea_manager.py  util.py
src/tofisca/configuration/: config_item.py  database.py
src/tofisca/hardware/: pwm_manager.py  tofisca_hardware_driver.py
src/tofisca/ssh_prompt_ui/: commandparser.py
src/tofisca/utils/: __init__.py
src/tofisca/webUI.flexx/: controller.py  livestream_handler.py  preview_handler.py  preview_image.py  roi_info_widget.py  webui_app.py
src/tofisca/web_ui/: __init__.py  api_errors.py  camera_api.py  global_api.py  hardware_api.py  project_api.py  server.py
tests/: __init__.py  context.py  film_generator.py  mock_picamera2.py  test_app.py  test_film_specs.py  test_hardware_manager.py  test_main.py  test_mock_picamera2.py  test_project.py  test_project_manager.py  test_scanarea_manager.py  test_tofisca_hardware_driver.py
tests/configuration/: test_config_item.py  test_database.py
tests/mockpicamera/: film_generator.py  mock_camera.py  mock_configuration.py  mock_controls.py  mock_picamera2.py  mock_requests.py  original_camera.py  test_camera.py
tests/test_configuration/: test_config_item.py  test_database.py
tests/test_hardware/: test_pwm_manager.py  test_tofisca_hardware_driver.py
tests/test_webui/: __init__.py  test_api_camera.py  test_api_websocket.py  test_camera_api.py  test_global_api.py  test_project_api.py  test_server.py  test_websocket_api.py
tests/webui/: test_api_websocket.py
tofisca/: __init__.py  app.py  camera_manager.py  cli.py  config_items.py  errors.py  film_specs.py  hardware_manager.py  main.py  models.py  observer.py  parameters.py  project.py  project_manager.py  scanarea_manager.py
tofisca/configuration/: __init__.py  config_item.py  database.py
tofisca/hardware/: hardware_pwm.py  tofisca_hardware_driver.py
tofisca/ssh_prompt_ui/: __init__.py  promptui_app.py  subdec.py
tofisca/utils/: event_threadsafe.py
tofisca/webUI.flexx/: _dummy_image.py  _roi_widget.py  _spinner.py  setuppage_hardware.py  setuppage_roi_selector.py  startpoint_widget.py  video_preview.py
tofisca/web_ui/: __init__.py  global_api.py  project_api.py  senditem_websocket.py  server.py  websocket_api.py
